<resources>
    <string name="app_name">Task</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="add_task">Add Task.</string>
    <string name="editfab">editFab</string>
    <string name="edit_task">Edit Task.</string>
    <string name="task_title">Task Title</string>
    <string name="description">Description</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
</resources>